feat: Umgang mit der gebundenen Workflow-Fassung (M4.4)
